root/apps/web/qmail/service.yaml
apiVersion: v1
kind: Service
metadata: { name: qmail, namespace: web }
spec:
  selector: { app: qmail }
  ports: [ { port: 80, targetPort: 80 } ]
  type: ClusterIP
