root/apps/web/qmail/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qmail-ingress
  namespace: web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts: [ "qmail.preprod.qoffice.cloud" ]
      secretName: qmail-tls
  rules:
    - host: qmail.preprod.qoffice.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: qmail, port: { number: 80 } } }
